--- a/Crocodile/Screens/GameScreen/GameScreen.storyboard
+++ b/Crocodile/Screens/GameScreen/GameScreen.storyboard
@@ -17,9 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QhL-2A-c6f">
+                                <rect key="frame" x="64.666666666666686" y="806.33333333333337" width="301" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.58039215690000001" blue="0.21176470589999999" alpha="1" colorSpace="deviceRGB"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aL9-Og-PVi">
                                 <rect key="frame" x="64.666666666666686" y="806.33333333333337" width="301" height="65"/>
-                                <color key="backgroundColor" red="0.85098039219999999" green="0.61176470589999998" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="ReadyButton"/>
                                 <connections>
@@ -69,14 +73,18 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" red="0.0" green="0.87450980392156863" blue="0.031372549019607843" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
                             <constraint firstItem="aL9-Og-PVi" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.7" id="0da-Rz-Fj0"/>
+                            <constraint firstItem="aL9-Og-PVi" firstAttribute="trailing" secondItem="QhL-2A-c6f" secondAttribute="trailing" id="2ai-ik-RJy"/>
                             <constraint firstItem="KUW-jy-k5A" firstAttribute="top" secondItem="M9V-Ta-UWb" secondAttribute="bottom" constant="8" symbolic="YES" id="BA5-Cd-rXx"/>
                             <constraint firstItem="aL9-Og-PVi" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="CKR-WB-iWZ"/>
                             <constraint firstItem="M9V-Ta-UWb" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.5" id="EnR-Up-rNI"/>
+                            <constraint firstItem="QhL-2A-c6f" firstAttribute="leading" secondItem="aL9-Og-PVi" secondAttribute="leading" id="Glb-ND-Xuv"/>
                             <constraint firstItem="KUW-jy-k5A" firstAttribute="leading" secondItem="M9V-Ta-UWb" secondAttribute="leading" id="KqJ-gl-oBx"/>
                             <constraint firstItem="aL9-Og-PVi" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.07" id="R8Y-uD-hNY"/>
+                            <constraint firstItem="QhL-2A-c6f" firstAttribute="top" secondItem="aL9-Og-PVi" secondAttribute="top" id="dSy-LI-N59"/>
+                            <constraint firstItem="QhL-2A-c6f" firstAttribute="bottom" secondItem="aL9-Og-PVi" secondAttribute="bottom" id="fti-1I-aVd"/>
                             <constraint firstItem="M9V-Ta-UWb" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="hqK-C3-BNo"/>
                             <constraint firstItem="aL9-Og-PVi" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.8" id="iac-c3-t1u"/>
                             <constraint firstItem="M9V-Ta-UWb" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.8" id="m8g-eT-8HH"/>
@@ -85,6 +93,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="Ym3-wf-1yc"/>
                     <connections>
+                        <outlet property="backgroundViewForButton" destination="QhL-2A-c6f" id="Cro-oq-Lxa"/>
+                        <outlet property="gameContainerView" destination="M9V-Ta-UWb" id="l6u-Bh-qfL"/>
                         <outlet property="giveUpButton" destination="KUW-jy-k5A" id="Ly0-hM-jQ1"/>
                         <outlet property="readyButton" destination="aL9-Og-PVi" id="AaF-Wh-8r9"/>
                         <outlet property="showingPlayerLabel" destination="I73-vl-UQu" id="We6-iM-3Fe"/>
@@ -93,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="982.44274809160299" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="982.32558139534888" y="-27.682403433476395"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bnU-Dd-QA5">
@@ -117,9 +127,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
