--- a/Crocodile/Screens/CategoryScreen/Base.lproj/Category.storyboard
+++ b/Crocodile/Screens/CategoryScreen/Base.lproj/Category.storyboard
@@ -86,7 +86,7 @@
                                 <rect key="frame" x="59" y="740.66666666666663" width="275" height="52.333333333333371"/>
                                 <color key="backgroundColor" red="1" green="0.60392156862745094" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Далее"/>
                                 <connections>
                                     <action selector="nextButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rZk-2y-9nr"/>
                                 </connections>
