--- a/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
+++ b/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
@@ -73,7 +73,7 @@
                                 <rect key="frame" x="59" y="737" width="275" height="59.666666666666629"/>
                                 <color key="backgroundColor" red="1" green="0.58039215690000001" blue="0.21176470589999999" alpha="1" colorSpace="deviceRGB"/>
                             </view>
-                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UmD-tH-4c4">
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UmD-tH-4c4" customClass="MainButton" customModule="Crocodile" customModuleProvider="target">
                                 <rect key="frame" x="59" y="737" width="275" height="59.666666666666629"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -130,6 +130,11 @@
             <point key="canvasLocation" x="55.725190839694655" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="UmD-tH-4c4">
+            <size key="intrinsicContentSize" width="110.33333333333333" height="34.333333333333336"/>
+        </designable>
+    </designables>
     <resources>
         <image name="checkmark.circle" catalog="system" width="128" height="123"/>
     </resources>
