--- a/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
+++ b/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
@@ -69,33 +69,22 @@
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="RSO-h2-F6I"/>
                                 </connections>
                             </tableView>
-                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9wn-Ji-75e" userLabel="BackgroundViewForButton">
-                                <rect key="frame" x="59" y="737" width="275" height="59.666666666666629"/>
-                                <color key="backgroundColor" red="1" green="0.58039215690000001" blue="0.21176470589999999" alpha="1" colorSpace="deviceRGB"/>
-                            </view>
-                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UmD-tH-4c4" customClass="MainButton" customModule="Crocodile" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UmD-tH-4c4" customClass="MainButton" customModule="Crocodile" customModuleProvider="target">
                                 <rect key="frame" x="59" y="737" width="275" height="59.666666666666629"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="NextButton"/>
-                                <connections>
-                                    <action selector="nextButtonAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0tL-uF-Hjz"/>
-                                </connections>
+                                <buttonConfiguration key="configuration" style="plain"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.0" green="0.87450980389999999" blue="0.031372549020000001" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
-                            <constraint firstItem="UmD-tH-4c4" firstAttribute="bottom" secondItem="9wn-Ji-75e" secondAttribute="bottom" id="03y-Xn-O7h"/>
-                            <constraint firstItem="9wn-Ji-75e" firstAttribute="leading" secondItem="UmD-tH-4c4" secondAttribute="leading" id="986-2j-5LA"/>
                             <constraint firstItem="nKj-wG-6in" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="KAw-vE-iDx"/>
                             <constraint firstItem="nKj-wG-6in" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="LX6-TM-x2O"/>
                             <constraint firstItem="UmD-tH-4c4" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" multiplier="0.7" id="Loz-PK-AXu"/>
                             <constraint firstItem="UmD-tH-4c4" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.8" id="MPq-LV-drp"/>
-                            <constraint firstItem="9wn-Ji-75e" firstAttribute="top" secondItem="UmD-tH-4c4" secondAttribute="top" id="Oup-JT-cqi"/>
                             <constraint firstItem="UmD-tH-4c4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="hTp-EK-g8r"/>
                             <constraint firstItem="nKj-wG-6in" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hmq-SJ-JRa"/>
-                            <constraint firstItem="UmD-tH-4c4" firstAttribute="trailing" secondItem="9wn-Ji-75e" secondAttribute="trailing" id="ukB-2j-swS"/>
                             <constraint firstItem="UmD-tH-4c4" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.07" id="v47-IA-zNh"/>
                             <constraint firstAttribute="bottom" secondItem="nKj-wG-6in" secondAttribute="bottom" id="y0j-kc-KDv"/>
                         </constraints>
@@ -103,8 +92,7 @@
                     <navigationItem key="navigationItem" title="Введите имена игроков" id="jQ9-CG-hSj"/>
                     <connections>
                         <outlet property="addPlayersTableView" destination="nKj-wG-6in" id="ntT-NI-Lvo"/>
-                        <outlet property="backgroundViewForButton" destination="9wn-Ji-75e" id="umv-LE-Ryb"/>
-                        <outlet property="nextButton" destination="UmD-tH-4c4" id="ZyX-cp-t8l"/>
+                        <outlet property="mainButton" destination="UmD-tH-4c4" id="ZyX-cp-t8l"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -132,7 +120,7 @@
     </scenes>
     <designables>
         <designable name="UmD-tH-4c4">
-            <size key="intrinsicContentSize" width="110.33333333333333" height="34.333333333333336"/>
+            <size key="intrinsicContentSize" width="24" height="14"/>
         </designable>
     </designables>
     <resources>
