stable version bug: multiple layers on uiTextField

--- a/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
+++ b/Crocodile/Screens/AddPlayers/AddPlayers.storyboard
@@ -40,6 +40,7 @@
                                                 </button>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Введите имя игрока" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I63-aD-P4q">
                                                     <rect key="frame" x="20" y="11" width="279" height="66"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                     <connections>
